@@ -149,6 +149,7 @@ int ipslr_status_parse_k20d(ipslr_handle_t *p, pslr_status *status, int n);
 int ipslr_status_parse_k10d(ipslr_handle_t *p, pslr_status *status, int n);
 int ipslr_status_parse_k200d(ipslr_handle_t *p, pslr_status *status, int n);
 int ipslr_status_parse_istds(ipslr_handle_t *p, pslr_status *status, int n);
+int ipslr_status_parse_k5(ipslr_handle_t *p, pslr_status *status, int n);
 
 static ipslr_model_info_t camera_models[] = {
     { PSLR_ID1_IST_DS,  "*ist DS",  1, 264, 3, {6, 4, 2},      5, 4000, 200, 3200, ipslr_status_parse_istds },
@@ -160,13 +161,13 @@ static ipslr_model_info_t camera_models[] = {
     { PSLR_ID1_K200D,   "K200D",    0, 408, 3, {10, 6, 2},     9, 4000, 100, 1600, ipslr_status_parse_k200d }, 
     { PSLR_ID1_K7,      "K-7",      0, 436, 4, {14, 10, 6, 2}, 9, 8000, 100, 3200, ipslr_status_parse_kx    },
     { PSLR_ID1_KR,      "K-r",      0, 440, 3, {12, 10, 6, 2}, 9, 6000, 100, 12800, ipslr_status_parse_kr   },
+    { PSLR_ID1_K5,      "K-5",      0, 444, 4, {16, 10, 6, 2}, 9, 8000, 100, 12800, ipslr_status_parse_k5   },
 // only limited support from here
     { PSLR_ID1_IST_D,   "*ist D",   1, 0,   3, {6, 4, 2}, 3, 4000, 200, 3200, NULL},
     { PSLR_ID1_IST_DS2, "*ist DS2", 1, 0,   3, {6, 4, 2}, 5, 4000, 200, 3200, NULL},
     { PSLR_ID1_IST_DL,  "*ist DL",  1, 0,   3, {6, 4, 2}, 5, 4000, 200, 3200, NULL},
     { PSLR_ID1_K110D,   "K110D",    0, 0,   3, {6, 4, 2}, 5, 4000, 200, 3200, NULL},
     { PSLR_ID1_K100D,   "K100D",    0, 0,   3, {6, 4, 2}, 5, 4000, 200, 3200, NULL},
-    { PSLR_ID1_K5,      "K-5",      0, 0,   4, {16, 10, 6, 2}, 9, 6000, 100, 12800, NULL},
 };
 
 char* valid_vendors[2] = {"PENTAX", "SAMSUNG"};
@@ -936,6 +937,63 @@ int ipslr_status_parse_istds(ipslr_handle_t *p, pslr_status *status, int n) {
         return PSLR_OK;
 }
 
+// some of the cameras share most of the status fields
+// this method is used for K-x, K-7, K-5, K-r
+void ipslr_status_parse_common(ipslr_handle_t *p, pslr_status *status, int n) {
+
+    uint8_t *buf = p->status_buffer;
+    status->bufmask = buf[0x1E] << 8 | buf[0x1F];
+    status->current_iso = get_uint32(&buf[0x134]); //d
+    status->current_shutter_speed.nom = get_uint32(&buf[0x10C]); //d
+    status->current_shutter_speed.denom = get_uint32(&buf[0x110]); //d
+    status->current_aperture.nom = get_uint32(&buf[0x114]); //d 3C
+    status->current_aperture.denom = get_uint32(&buf[0x118]); //d 40
+    status->lens_min_aperture.nom = get_uint32(&buf[0x144]); //d
+    status->lens_min_aperture.denom = get_uint32(&buf[0x148]); //d
+    status->lens_max_aperture.nom = get_uint32(&buf[0x14C]); //d
+    status->lens_max_aperture.denom = get_uint32(&buf[0x150]); //d
+    status->set_aperture.nom = get_uint32(&buf[0x3C]); //d
+    status->set_aperture.denom = get_uint32(&buf[0x40]); //d
+    status->set_shutter_speed.nom = get_uint32(&buf[0x34]); //d
+    status->set_shutter_speed.denom = get_uint32(&buf[0x38]); //d
+    status->fixed_iso = get_uint32(&buf[0x68]); //d
+    status->jpeg_resolution = get_uint32(&buf[0x84]); //d
+    status->jpeg_contrast = get_uint32(&buf[0x9C]); // commands do now work for it?
+    status->jpeg_sharpness = get_uint32(&buf[0x98]); // commands do now work for it?
+    status->jpeg_saturation = get_uint32(&buf[0x94]); // commands do now work for it?
+    status->jpeg_hue = get_uint32(&buf[0xFC]);
+    status->jpeg_quality = _get_user_jpeg_quality( p->model, get_uint32(&buf[0x88])); //d
+    status->jpeg_image_mode = get_uint32(&buf[0x90]); //d
+    status->raw_format = get_uint32(&buf[0x8C]); //d
+    status->image_format = get_uint32(&buf[0x80]); //d
+    status->light_meter_flags = get_uint32(&buf[0x140]); //d
+    status->ec.nom = get_uint32(&buf[0x44]); //d
+    status->ec.denom = get_uint32(&buf[0x48]); //d
+    status->custom_ev_steps = get_uint32(&buf[0xA4]);
+    status->custom_sensitivity_steps = get_uint32(&buf[0xa8]);
+    status->exposure_mode = get_uint32(&buf[0xb4]); //d
+    status->user_mode_flag = get_uint32(&buf[0x24]); //d
+    status->af_mode = get_uint32(&buf[0xC0]);
+    status->af_point_select = get_uint32(&buf[0xbc]); // also on c4
+    status->selected_af_point = get_uint32(&buf[0xc8]); //d
+    status->focused_af_point = get_uint32(&buf[0x168]); //d, unsure about it, a lot is changing when the camera focuses
+    status->auto_iso_min = get_uint32(&buf[0x6C]);
+    status->auto_iso_max = get_uint32(&buf[0x70]);
+    status->drive_mode = get_uint32(&buf[0x5C]);
+    status->auto_bracket_mode = get_uint32(&buf[0x4C]);
+    status->auto_bracket_ev.nom = get_uint32(&buf[0x50]);
+    status->auto_bracket_ev.denom = get_uint32(&buf[0x54]);
+    status->auto_bracket_picture_count = get_uint32(&buf[0x58]);
+    status->shake_reduction = get_uint32(&buf[0xE0]);
+    status->white_balance_mode = get_uint32(&buf[0x74]);
+    status->white_balance_adjust_mg = get_uint32(&buf[0x78]); // 0: M7 7: 0 14: G7
+    status->white_balance_adjust_ba = get_uint32(&buf[0x7C]); // 0: B7 7: 0 14: A7
+    status->flash_mode = get_uint32(&buf[0x28]);
+    status->flash_exposure_compensation = get_int32(&buf[0x2C]);
+    status->manual_mode_ev = get_int32(&buf[0x15C]);
+    status->color_space = get_uint32(&buf[0xA0]);
+}
+
 int ipslr_status_parse_kx(ipslr_handle_t *p, pslr_status *status, int n) {
 
     uint8_t *buf = p->status_buffer;
@@ -944,62 +1002,14 @@ int ipslr_status_parse_kx(ipslr_handle_t *p, pslr_status *status, int n) {
         ipslr_status_diff(buf);
     }
 
-        memset(status, 0, sizeof (*status));	
-        status->bufmask = buf[0x1E] << 8 | buf[0x1F];
-
-        status->current_iso = get_uint32(&buf[0x134]); //d
-
-        status->current_shutter_speed.nom = get_uint32(&buf[0x10C]); //d
-        status->current_shutter_speed.denom = get_uint32(&buf[0x110]); //d
-        status->current_aperture.nom = get_uint32(&buf[0x114]); //d 3C
-        status->current_aperture.denom = get_uint32(&buf[0x118]); //d 40
-        status->lens_min_aperture.nom = get_uint32(&buf[0x144]); //d
-        status->lens_min_aperture.denom = get_uint32(&buf[0x148]); //d
-        status->lens_max_aperture.nom = get_uint32(&buf[0x14C]); //d
-        status->lens_max_aperture.denom = get_uint32(&buf[0x150]); //d
-        status->set_aperture.nom = get_uint32(&buf[0x3C]); //d
-        status->set_aperture.denom = get_uint32(&buf[0x40]); //d
-        status->set_shutter_speed.nom = get_uint32(&buf[0x34]); //d
-        status->set_shutter_speed.denom = get_uint32(&buf[0x38]); //d
-        status->fixed_iso = get_uint32(&buf[0x68]); //d
-        status->jpeg_resolution = get_uint32(&buf[0x84]); //d
-        status->jpeg_contrast = get_uint32(&buf[0x9C]); // commands do now work for it?
-        status->jpeg_sharpness = get_uint32(&buf[0x98]); // commands do now work for it?
-        status->jpeg_saturation = get_uint32(&buf[0x94]); // commands do now work for it?
-        status->jpeg_hue = get_uint32(&buf[0xFC]);
-        status->jpeg_quality = _get_user_jpeg_quality( p->model, get_uint32(&buf[0x88])); //d
-        status->jpeg_image_mode = get_uint32(&buf[0x90]); //d
-        status->zoom.nom = get_uint32(&buf[0x198]); //d
-        status->zoom.denom = get_uint32(&buf[0x19C]); //d
-        status->focus = get_int32(&buf[0x1A0]); //d
-        status->raw_format = get_uint32(&buf[0x8C]); //d
-        status->image_format = get_uint32(&buf[0x80]); //d
-        status->light_meter_flags = get_uint32(&buf[0x140]); //d
-        status->ec.nom = get_uint32(&buf[0x44]); //d
-        status->ec.denom = get_uint32(&buf[0x48]); //d
-        status->custom_ev_steps = get_uint32(&buf[0xA4]);
-        status->custom_sensitivity_steps = get_uint32(&buf[0xa8]);
-        status->exposure_mode = get_uint32(&buf[0xb4]); //d
-        status->user_mode_flag = get_uint32(&buf[0x24]); //d
-        status->af_mode = get_uint32(&buf[0xC0]);
-        status->af_point_select = get_uint32(&buf[0xc4]);
-        status->selected_af_point = get_uint32(&buf[0xc8]); //d
-        status->focused_af_point = get_uint32(&buf[0x168]); //d, unsure about it, a lot is changing when the camera focuses
-        status->auto_iso_min = get_uint32(&buf[0x6C]);
-        status->auto_iso_max = get_uint32(&buf[0x70]);
-        status->drive_mode = get_uint32(&buf[0x5C]);
-        status->auto_bracket_ev.nom = get_uint32(&buf[0x50]);
-        status->auto_bracket_ev.denom = get_uint32(&buf[0x54]);
-        status->auto_bracket_picture_count = get_uint32(&buf[0x58]);
-        status->shake_reduction = get_uint32(&buf[0xE0]);
-        status->white_balance_mode = get_uint32(&buf[0x74]);
-        status->white_balance_adjust_mg = get_uint32(&buf[0x78]); // 0: M7 7: 0 14: G7
-        status->white_balance_adjust_ba = get_uint32(&buf[0x7C]); // 0: B7 7: 0 14: A7 
-        status->flash_mode = get_uint32(&buf[0x28]);
-        status->flash_exposure_compensation = get_int32(&buf[0x2C]);
-        status->manual_mode_ev = get_int32(&buf[0x15C]);
-        status->color_space = get_uint32(&buf[0xA0]);
-        return PSLR_OK;
+    memset(status, 0, sizeof (*status));	
+    ipslr_status_parse_common( p, status, n );
+    status->zoom.nom = get_uint32(&buf[0x198]);
+    status->zoom.denom = get_uint32(&buf[0x19C]);
+    status->focus = get_int32(&buf[0x1A0]);
+    status->lens_id1 = (get_uint32( &buf[0x188])) & 0x0F;
+    status->lens_id2 = get_uint32( &buf[0x194]);
+    return PSLR_OK;
 }
 
 // Vince: K-r support 2011-06-22
@@ -1166,6 +1176,30 @@ int ipslr_status_parse_kr(ipslr_handle_t *p, pslr_status *status, int n) {
 
         status->focus = get_int32(&buf[0x1A4]); //d
         // int32_t min_focus_value = get_int32(&buf[0x1A8]);
+
+        return PSLR_OK;
+}
+
+int ipslr_status_parse_k5(ipslr_handle_t *p, pslr_status *status, int n) {
+    uint8_t *buf = p->status_buffer;
+        /* K-x status block */
+    if( debug ) {
+        ipslr_status_diff(buf);
+    }
+
+    memset(status, 0, sizeof (*status));	
+    ipslr_status_parse_common( p, status, n );
+    status->zoom.nom = get_uint32(&buf[0x1A0]);
+    status->zoom.denom = get_uint32(&buf[0x1AC]); // or 0x1A4?
+    status->focus = get_int32(&buf[0x1A8]); // ?
+    status->lens_id1 = (get_uint32( &buf[0x190])) & 0x0F;
+    status->lens_id2 = get_uint32( &buf[0x19C]);
+    
+    return PSLR_OK;
+    
+// TODO: check these fields
+//status.exposureLock = getInt32(statusBuf, 0x13C);
+//status.focused = getInt32(statusBuf, 0x164);
 
         return PSLR_OK;
 }
